# easelenium

./: .gitignore  .travil.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: github-actions-demo.yml  python-publish.yml  test.yml
easelenium/: __init__.py  base_page_object.py  base_test.py  browser.py  mouse.py  utils.py
easelenium/scripts/: easelenium_cli.py  easelenium_ui.py
easelenium/tests/: browser_constructor_test.py  browser_new_test.py  browser_test.py  page_object_class_test.py  page_object_generator_test.py  parsed_classes_and_module_test.py  root_folder_test.py  string_utils_test.py  utils_test.py
easelenium/tests/api/: browser_constructor_test.py  browser_decorator_test.py  browser_new_test.py  browser_old_test.py
easelenium/tests/data/: duckduckgo_class_with_method.py  expected_duckduckgo_class_py  pickled_po_class_object
easelenium/ui/: __init__.py  context_menu.py  file_utils.py  main_ui.py  root_folder.py  string_utils.py  test_runner_ui.py  utils.py
easelenium/ui/editor/: __init__.py  editor_ui.py  field_context_menu.py  utils.py
easelenium/ui/generator/: __init__.py  generator_ui.py  get_xpath.js  page_object_class.py  page_object_generator.py
easyselenium/: .gitignore  base_page_object.py  base_test.py  browser.py  browser_test.py  utils.py
easyselenium/generator/: page_object_class.py  page_object_generator.py
easyselenium/licenses/: easyselenium_license.txt
easyselenium/parser/: parsed_class.py
easyselenium/scripts/: easy_selenium_cli.py  easy_selenium_ui.py  easyselenium_cli.py  easyselenium_ui.py
easyselenium/tests/: browser_test.py  page_object_class_test.py  page_object_generator_test.py  parsed_class_test.py  parsed_classes_and_module_test.py  root_folder_test.py  string_utils_test.py  utils_test.py
easyselenium/ui/: context_menu.py  easy_selenium_cli.py  easy_selenium_ui.py  file_utils.py  generator_ui.py  main_ui.py  root_folder.py  string_utils.py  test_runner_ui.py  utils.py
tests/: page_object_class_test.py  page_object_generator_test.py  parsed_classes_and_module_test.py  root_folder_test.py  string_utils_test.py  utils_test.py
tests/api/: browser_constructor_test.py  browser_decorator_test.py  browser_new_test.py  browser_old_test.py
tests/data/: duckduckgo_class_with_method.py
(+31 files in other folders)
